--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <!doctype html>
 <html lang="en">
 <head>
@@ -9,5 +10,9 @@
 </head>
 <body>
   <app-root></app-root>
+  <div class="mat-app-background basic-container">
+    <menu-overview-example>loading</menu-overview-example>
+  </div>
+  <span class="version-info">Current build: 7.3.7</span>
 </body>
 </html>
